# jlm-ai-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml  daily-maintenance.yml
apps/examples/arbitrage-bot/src/: index.ts
apps/examples/global-macro-bot/src/: index.ts
apps/examples/grid-trading-bot/src/: index.ts
apps/examples/pairs-trading-bot/src/: index.ts
apps/examples/polymarket-sentiment-bot/src/: index.ts
apps/examples/scalping-bot/src/: index.ts
apps/examples/yield-optimizer/src/: index.ts
apps/oap-cli/: package.json
apps/oap-cli/src/: index.ts
docs/: architecture.md
plugins/plugin-analytics/: package.json
plugins/plugin-analytics/src/: index.ts
plugins/plugin-dao-governance/: package.json
plugins/plugin-dao-governance/src/: index.ts
plugins/plugin-forex-metals/: package.json
plugins/plugin-forex-metals/src/: index.ts
plugins/plugin-news-sentiment/: package.json
plugins/plugin-news-sentiment/src/: index.ts
plugins/plugin-polymarket/: package.json
plugins/plugin-polymarket/src/: index.ts
plugins/plugin-pumpfun/: package.json
plugins/plugin-pumpfun/src/: index.ts
plugins/plugin-stocks/: package.json
plugins/plugin-stocks/src/: index.ts
plugins/plugin-twitter/: package.json
plugins/plugin-twitter/src/: index.ts
plugins/plugin-uniswap/: package.json
plugins/plugin-uniswap/src/: index.ts
plugins/plugin-watchtower/: package.json
plugins/plugin-watchtower/src/: index.ts
